chnaging the dark mood bugs the price now visible Uttkarsh suggestion

--- a/src/components/BookingForm.css
+++ b/src/components/BookingForm.css
@@ -39,7 +39,7 @@ body {
 
 /* Dark Mode Styles */
 body.dark-mode {
-  background-color: #100f27; /* Dark background */
+  background-color: #020111 ; /* Dark background */
   color: #fff; /* White text */
 }
 
